Changelog
=========


1.1.2 (unreleased)
------------------

- Nothing changed yet.


1.1.1 (2016-07-06)
------------------

- Remove obsolete css selector
  [Kevin Bieri]


1.1.0 (2016-06-27)
------------------

- Implement uninstall profile. [jone]

- Implement ftw.mobile button.
  [mathias.leimgruber]


1.0.0 (2016-04-14)
------------------

- Add browserlayer.
  [mathias.leimgruber]

- Initial implementation
  [jone]