@@ -5,7 +5,8 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Do not show links to non-existent objects
+  [raphael-s]
 
 
 1.1.1 (2016-07-06)
